--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <span>goTo: </span>
         <button onclick="hEl.goToElementLocation('reset')">reset</button>
         <button onclick="hEl.goToElementLocation('sq')">div</button>
+        <button onclick="hEl.goToElementLocation('div2')">div2</button>
         <button onclick="hEl.goToElementLocation('vid')">vid</button>
         <button onclick="hEl.goToElementLocation('img')">img</button>
         <button onclick="hEl.goToElementLocation('textbox')">textbox</button>
