Add divreset element

--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
       })
 
       // HTML element div
-      var sq = document.createElement("div")
-      sq.style.backgroundColor = "rgba(0,0,0,0.0)"
-      sq.style.border = "solid 1px blue"
+      var divreset = document.createElement("div")
+      divreset.style.backgroundColor = "rgba(0,0,0,0.0)"
+      divreset.style.border = "solid 1px blue"
 
       hEl.addElement({
-        id: "reset",
-        element: reset,
+        id: "divreset",
+        element: divreset,
         x: 0,
         y: 0,
         width: 5000,
