--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body style="display: flex; justify-content: center; background: #121621">
     <div style="position: fixed; background: #eee; height: 100%; box-shadow: 0 4px 8px 0 rgba(200, 200, 200, 0.6), 0 6px 20px 0 rgba(200, 200, 200, 0.6);">
       <div style="display: flex; justify-content: center; align-items: flex-end; background: blanchedalmond">
-        <h1>OpenSeadragonHTMLelements plugin demo</h1>
+        <h1>YMCA</h1>
+        <h3>OpenSeadragonHTMLelements plugin demo</h3>
         <span>Check out on <a href="https://github.com/antonioxdias/OpenSeadragonHTMLelements">github</a></span>
       </div>
       <div>
