Fix divreset button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="osd" style="width: 800px; height:600px; border: solid 1px black;"></div>
         <br/>
         <span>goTo: </span>
-        <button onclick="hEl.goToElementLocation('reset')">reset</button>
+        <button onclick="hEl.goToElementLocation('divreset')">divreset</button>
         <button onclick="hEl.goToElementLocation('sq')">div</button>
         <button onclick="hEl.goToElementLocation('vid')">vid</button>
         <button onclick="hEl.goToElementLocation('img')">img</button>
