--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div style="position: fixed; background: #eee; height: 100%; box-shadow: 0 4px 8px 0 rgba(200, 200, 200, 0.6), 0 6px 20px 0 rgba(200, 200, 200, 0.6);">
       <div style="display: flex; justify-content: center; align-items: flex-end; background: blanchedalmond">
         <h1>YMCA</h1>
-        <span>Check out on <a href="https://github.com/antonioxdias/OpenSeadragonHTMLelements">github</a></span>
+        <!--<span>Check out on <a href="https://github.com/antonioxdias/OpenSeadragonHTMLelements">github</a></span>-->
       </div>
       <div>
-        <p>Plugin to add HTMLelement overlaying capability to <a href="https://github.com/openseadragon/openseadragon">OpenSeadragon</a>.</p>
-        <p>This allows for elements to be panned, zoomed, rotated and flipped with the viewer, mantaining their position and size ratio.</p>
+        <!--<p>Plugin to add HTMLelement overlaying capability to <a href="https://github.com/openseadragon/openseadragon">OpenSeadragon</a>.</p>
+        <p>This allows for elements to be panned, zoomed, rotated and flipped with the viewer, mantaining their position and size ratio.</p>-->
         <div id="osd" style="width: 800px; height:600px; border: solid 1px black;"></div>
         <br/>
         <span>goTo: </span>
@@ -68,7 +68,7 @@
       })
 
       // HTML element with video embed
-      var vid = document.createElement("iframe")
+/*      var vid = document.createElement("iframe")
       vid.src = "https://www.youtube.com/embed/a3ICNMQW7Ok"
       vid.frameBorder = "0"
       vid.allowFullscreen = true
@@ -94,7 +94,7 @@
           height: 2040
         }
       ])
-
+*/
       // HTML element div yellow
       var sq = document.createElement("div")
       sq.style.backgroundColor = "rgba(40,200,100,0.2)"
@@ -124,7 +124,7 @@
       })
       
       // HTML element textbox
-      var textbox = document.createElement("div")
+/*      var textbox = document.createElement("div")
       textbox.style.backgroundColor = "rgba(200,200,200,0.8)"
       textbox.style.border = "solid 1px black"
       textbox.style.borderRadius = "8px"
@@ -139,6 +139,7 @@
         height: 2500,
         fontSize: 14
       })
+*/
     </script>
   </body>
 </html>
