--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>osd-html-elements-demo</title>
+    <title>YMCA New London Plan</title>
     <script src="https://openseadragon.github.io/openseadragon/openseadragon.min.js"></script>
     <script src="OpenSeadragonHTMLelements.js"></script>
   </head>
-  <body style="display: flex; justify-content: center; background: #121621">
-    <div style="position: fixed; background: #eee; height: 100%; box-shadow: 0 4px 8px 0 rgba(200, 200, 200, 0.6), 0 6px 20px 0 rgba(200, 200, 200, 0.6);">
-      <div style="display: flex; justify-content: center; align-items: flex-end; background: blanchedalmond">
+  <body style="display: flex; justify-content: center;">
+    <div style="position: fixed; background: #eee; height: 100%;">
+      <div style="display: flex; justify-content: center; align-items: flex-end;">
         <h1>YMCA</h1>
         <!--<span>Check out on <a href="https://github.com/antonioxdias/OpenSeadragonHTMLelements">github</a></span>-->
       </div>
